started to implement parallel running changed logger with log4j2 using